# stockpulse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py
logs/: StockPulse Momentum+Catalyst_2026-04-13_23-14_0mJJa7_settings.json  StockPulse Momentum+Catalyst_2026-04-13_23-17_09q7By_settings.json  StockPulse Momentum+Catalyst_2026-04-13_23-17_09q7By_stats.parquet  StockPulse Momentum+Catalyst_2026-04-13_23-17_09q7By_tearsheet.html  StockPulse Momentum+Catalyst_2026-04-13_23-18_rq37q9_settings.json  StockPulse Momentum+Catalyst_2026-04-13_23-18_rq37q9_stats.csv  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_settings.json  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_stats.csv  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_stats.parquet  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_tearsheet.csv  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_tearsheet.html  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_tearsheet_metrics.json  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_trade_events.csv  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_trade_events.parquet  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_trades.csv  StockPulse Momentum+Catalyst_2026-04-13_23-19_hJR01h_trades.parquet  debug2_2026-04-13_23-17_ic86tG_settings.json  debug2_2026-04-13_23-17_ic86tG_stats.parquet  debug2_2026-04-13_23-17_ic86tG_tearsheet.html  debug3_2026-04-13_23-18_Eia13u_settings.json  debug3_2026-04-13_23-18_Eia13u_stats.csv  debug3_2026-04-13_23-18_Eia13u_stats.parquet  debug3_2026-04-13_23-18_Eia13u_tearsheet.csv  debug3_2026-04-13_23-18_Eia13u_tearsheet.html  debug3_2026-04-13_23-18_Eia13u_tearsheet_metrics.json  debug3_2026-04-13_23-18_Eia13u_trade_events.csv  debug3_2026-04-13_23-18_Eia13u_trade_events.parquet  debug3_2026-04-13_23-18_Eia13u_trades.csv  debug3_2026-04-13_23-18_Eia13u_trades.parquet  debug_2026-04-13_23-17_SLK6og_settings.json  debug_2026-04-13_23-17_SLK6og_stats.csv  debug_2026-04-13_23-17_SLK6og_tearsheet.html  debug_2026-04-13_23-17_SLK6og_trade_events.parquet  (+11 more)
tests/: test_advisor.py  (+26 more)
(+82 files in other folders)
