[project]
name = "stockpulse"
version = "0.1.0"
description = "Local stock research and alert system"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Amir Shetaia"}]
keywords = ["stocks", "trading", "scanner", "signals", "research", "alerts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.12"
dependencies = [
    "lumibot>=3.0",
    "finnhub-python>=2.4",
    "yfinance>=0.2",
    "edgartools>=3.0",
    "pandas>=2.0",
    "pandas-ta>=0.3",
    "anthropic>=0.40",
    "apscheduler>=3.10,<4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "pytz>=2024.1",
    "python-telegram-bot>=21.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[project.urls]
Homepage = "https://github.com/amirshetaia/stockpulse"

[project.scripts]
stockpulse = "run:main"

[tool.setuptools.packages.find]
include = ["stockpulse*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
